--- a/config/database.yml
+++ b/config/database.yml
@@ -9,17 +9,17 @@ default: &default
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
   timeout: 5000
 
-development:
-  <<: *default
+development: &development
+  adapter: sqlite3
   database: db/development.sqlite3
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
 test:
-  <<: *default
+  <<: *development
   database: db/test.sqlite3
 
 production:
   <<: *default
-  database: db/production.postgresql
+  database: nbm_production
