Change Var Env to access to DB on the real tag database

--- a/config/database.yml
+++ b/config/database.yml
@@ -22,6 +22,4 @@ test:
 
 production:
   <<: *default
-  database: nbm_production
-  username: user
-  password: <%= ENV['DATABASE_URL'] %>
+  database: <%= ENV['DATABASE_URL'] %> 
