Change Var Env to access to DB on the real tag database

--- a/config/database.yml
+++ b/config/database.yml
@@ -23,3 +23,5 @@ test:
 production:
   <<: *default
   database: <%= ENV['DATABASE_URL'] %> 
+  user: pkcgnnbzdvsvrz
+  password: <%= ENV['DATABASE_PASS'] %>
